# HybridADRSolver

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  _formulas.tex  _formulas_dark.tex  adr__operator_8h.html  adr__operator_8h.js  adr__operator_8h__dep__incl.map  adr__operator_8h__dep__incl.md5  adr__operator_8h__incl.map  adr__operator_8h__incl.md5  adr__operator_8h_source.html  analyze_results.py  annotated.html  annotated_dup.js  benchmark__main_8cpp.html  benchmark__main_8cpp.js  benchmark__main_8cpp__incl.map  benchmark__main_8cpp__incl.md5  classBenchmarkUtils_1_1ResultCollector-members.html  classBenchmarkUtils_1_1ResultCollector.html  classBenchmarkUtils_1_1ResultCollector.js  classBenchmarkUtils_1_1Timer-members.html  classBenchmarkUtils_1_1Timer.html  classBenchmarkUtils_1_1Timer.js  classHybridADRSolver_1_1ADROperator-members.html  classHybridADRSolver_1_1ADROperator.html  classHybridADRSolver_1_1ADROperator.js  classHybridADRSolver_1_1ADROperator__coll__graph.map  classHybridADRSolver_1_1ADROperator__coll__graph.md5  classHybridADRSolver_1_1ADROperator__inherit__graph.map  classHybridADRSolver_1_1JacobiPreconditioner-members.html  classHybridADRSolver_1_1JacobiPreconditioner.html  classHybridADRSolver_1_1JacobiPreconditioner.js  classHybridADRSolver_1_1MatrixBasedSolver-members.html  classHybridADRSolver_1_1MatrixBasedSolver.html  classHybridADRSolver_1_1MatrixBasedSolver.js  (+310 more)
.github/workflows/: ci.yml  doxygen.yml
docs/html/: annotated.html  annotated_dup.js  class_hybrid_a_d_r_solver_1_1_matrix_based_solver.js  class_hybrid_a_d_r_solver_1_1_problems_1_1_exact_solution.html  class_hybrid_a_d_r_solver_1_1_problems_1_1_neumann_flux_right.html  classes.html  dir_30477247984cb555a61c036365bef8f7.html  dir_4cf372765f693cf540fc4810db0c309c.html  dir_5300cae3a1557603f8e561b18f8f3907.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  files.html  formula.repository  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  matrix__based__solver_8cpp.html  matrix__based__solver_8cpp.js  matrix__based__solver_8h.html  matrix__based__solver_8h.js  matrix__based__solver_8h_source.html  menudata.js  namespace_hybrid_a_d_r_solver_1_1_l_a_distributed.html  namespace_hybrid_a_d_r_solver_1_1_l_a_matrix_free.html  namespaces.html  namespaces_dup.js  (+17 more)
latex/: adr__operator_8h.tex  adr__operator_8h__dep__incl.md5  adr__operator_8h__incl.md5  adr__operator_8h_source.tex  annotated.tex  benchmark__main_8cpp.tex  benchmark__main_8cpp__incl.md5  classBenchmarkUtils_1_1ResultCollector.tex  classBenchmarkUtils_1_1Timer.tex  classHybridADRSolver_1_1ADROperator.tex  classHybridADRSolver_1_1ADROperator__inherit__graph.md5  classHybridADRSolver_1_1JacobiPreconditioner.tex  classHybridADRSolver_1_1MatrixBasedSolver.tex  classHybridADRSolver_1_1MatrixBasedSolver__coll__graph.md5  classHybridADRSolver_1_1MatrixBasedSolver__inherit__graph.md5  classHybridADRSolver_1_1MatrixFreeSolver.tex  classHybridADRSolver_1_1MatrixFreeSolver__coll__graph.md5  classHybridADRSolver_1_1MatrixFreeSolver__inherit__graph.md5  classHybridADRSolver_1_1ParallelSolverBase.tex  classHybridADRSolver_1_1ParallelSolverBase__coll__graph.md5  classHybridADRSolver_1_1ParallelSolverBase__inherit__graph.md5  classHybridADRSolver_1_1ProblemInterface.tex  classHybridADRSolver_1_1ProblemInterface__inherit__graph.md5  classHybridADRSolver_1_1Problems_1_1ADRProblem.tex  classHybridADRSolver_1_1Problems_1_1ADRProblem__coll__graph.md5  classHybridADRSolver_1_1Problems_1_1ExactSolution.tex  classHybridADRSolver_1_1Problems_1_1ExactSolution__coll__graph.md5  classHybridADRSolver_1_1Problems_1_1NeumannFluxRight.tex  classHybridADRSolver_1_1Problems_1_1NeumannFluxRight__inherit__graph.md5  convergence__study_8cpp.tex  convergence__study_8cpp__incl.md5  dir_30477247984cb555a61c036365bef8f7.tex  dir_4cf372765f693cf540fc4810db0c309c.tex  dir_5300cae3a1557603f8e561b18f8f3907.tex  dir_5300cae3a1557603f8e561b18f8f3907_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.md5  dir_b37174a55fe2fff4c427ef0aa1d4cc49.tex  (+69 more)
report/: main.tex  references.bib
result/: SUMMARY.txt  complexity_Hybrid_12x2.csv  complexity_Hybrid_14x2.csv  complexity_Hybrid_2x12.csv  complexity_Hybrid_2x14.csv  complexity_Hybrid_3x9.csv  complexity_Hybrid_4x7.csv  complexity_Hybrid_7x4.csv  complexity_Hybrid_8x3.csv  complexity_Hybrid_9x3.csv  complexity_MPI_16ranks.csv  complexity_MPI_20ranks.csv  complexity_PureMPI_28ranks.csv  complexity_PureThreading_1x28.csv  log_Hybrid_12x2.txt  log_Hybrid_14x2.txt  log_Hybrid_2x12.txt  log_Hybrid_2x14.txt  log_Hybrid_3x9.txt  log_Hybrid_4x7.txt  log_Hybrid_7x4.txt  log_Hybrid_8x3.txt  log_Hybrid_9x3.txt  log_MPI_16ranks.txt  log_MPI_20ranks.txt  log_PureMPI_28ranks.txt  log_PureThreading_1x28.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+66 more)
slides/: beamerinnerthemepolimi.sty  beamerouterthemepolimi.sty  main.tex
src/: GalerkinSolver.cc  GalerkinSolver.cpp  GalerkinSolver.h  GalerkinSolverMPI.cc  main.cpp  problem_parameters.h
src/applications/: CMakeLists.txt  convergence_study.cpp  main.cpp  main_matrix_based.cpp  main_matrix_free.cpp
src/applications/benchmark/: CMakeLists.txt  benchmark_main.cpp  convergence_study.cpp  main_2d.cpp  scaling_study.cpp  strong_scaling.cpp  utils.h  weak_scaling.cpp
src/applications/main/: CMakeLists.txt  main_matrix_based.cpp  main_matrix_free.cpp
tests/: CMakeLists.txt  test_basic_solver.cpp
(+73 files in other folders)
